// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error distribution queries fetches an error distribution 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
    ],
  },
  "body": Object {
    "aggs": Object {
      "distribution": Object {
        "histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "interval": 3333,
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "serviceName",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`error distribution queries fetches an error distribution with a group id 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
    ],
  },
  "body": Object {
    "aggs": Object {
      "distribution": Object {
        "histogram": Object {
          "extended_bounds": Object {
            "max": 50000,
            "min": 0,
          },
          "field": "@timestamp",
          "interval": 3333,
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "serviceName",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "term": Object {
              "error.grouping_key": "foo",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;
